<resources>
    <string name="app_name">Internshiparoma</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open_drawer">open drawer</string>
    <string name="close_drawer">close drawer</string>
    <string name="error_text">This field is required!</string>
    <string name="skill">How would you rate your skill in </string>
    <string name="responsibility">Example: Volunteer at Swacch Bharat Abhiyaan in 2019. </string>
    <string name="add_detail_info">Example: Secured first position in Inter Debate Competition organized by City Montessori School,Lucknow.</string>
    <string name="about_info">We are a well-handled and a purposeful organization that works intending to provide an appropriate platform for the learners to designate themselves with numerous skills and training. And a forum stage for the employers to hire freelancers with devoted skills to work with them in required fields.
</string>

    <string name="for_students">We provide them with practical exposure with online courses and apprenticeships of their relevance (anytime and anywhere) under the mentorship of experienced and finest professionals. Providing them the arena where they can pursue their passion as their career choice, with proper guidance and online pieces of training with minimal charges.
    </string>
    <string name="for_employers">Contributing them with the top-notch freelancers for their formulations having expertise in their respective fields ranging from science and technology, covering the parts of development, management, literature, and ending up to data entry and other services. </string>

    <string name="addresss">XYS,ABC street,\n Noida,India-122018 </string>
    <string name="working_hours">Monday to Friday, 10:00 AM to 5:00 PM</string>
    <string name="queries">For internship related queries, visit Students Help Centre</string>

    <string name="questions">Do you have any question(s) that you want the intern to answer in the application</string>
    <string name="question1">Why should you be hired for this internship?\n(maximum 2048 characters)</string>
    <string name="question2">Are you available for 1 month, starting immediately,for a work from home internship?If not, what is the time period you are available for and the earliest date you can start this internship on?</string>


    <!--Do not delete this line-->
    <!--
    <string name="GOOGLE_PLACE_API_KEY">AIzaSyA8PHLjPNg90W_Vy0GzhCLT1wCetUqIP0U</string>
-->
    <string name="GOOGLE_PLACE_API_KEY">AIzaSyDwUZjeaF1Ez2ocpxYZ0xqcrbRtghQ_6gw</string>
    <string name="type_something">Type Something...</string>

    <string-array name="nn">

        <item>k</item>
        <item>k</item>
        <item>k</item>
        <item>k</item>
        <item>k</item>
        <item>k</item>
        <item>k</item>
    </string-array>


</resources>
