<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ContactUs"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include layout="@layout/appbar_for_another_screen"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_gravity="center_horizontal"
        android:background="@color/viewResumeColor"
        android:id="@+id/viewResume" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/aboutus">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Address"
                android:textColor="@color/textColor"
                android:textSize="18sp"
                android:textStyle="bold"
                android:gravity="center_horizontal"
                android:paddingTop="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/addresss"
                android:textColor="@color/textColor"
                android:textSize="18sp"
                android:gravity="center_horizontal"
                android:paddingBottom="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Working hours"
                android:textColor="@color/textColor"
                android:textSize="18sp"
                android:textStyle="bold"
                android:gravity="center_horizontal"
                android:paddingTop="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/working_hours"
                android:textColor="@color/textColor"
                android:textSize="18sp"
                android:gravity="center_horizontal"
                android:paddingBottom="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/queries"
                android:textColor="@color/textColor"
                android:textSize="18sp"
                android:gravity="center_horizontal"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"/>
            <Button
                android:id="@+id/save"
                android:layout_width="wrap_content"
                android:background="@drawable/button_back"
                android:layout_height="wrap_content"
                android:text="Visit Help Centre"
                android:layout_margin="10dp"
                android:paddingLeft="80dp"
                android:layout_gravity="center_horizontal"
                android:paddingRight="80dp"
                android:textAllCaps="false"
                android:textColor="@color/windowColor"
                android:textSize="18sp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"/>

        </LinearLayout>
    </ScrollView>


</LinearLayout>