<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PostInternshipActivity"
    android:orientation="vertical">
    <TextView
        android:id="@+id/tv_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/dark"
        android:text="Internshiparoma"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="25dp"
        android:paddingVertical="20dp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv"
                android:layout_marginTop="40dp"
                android:layout_marginLeft="35dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Enter the details to start hiring"/>

            <ViewFlipper
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv"
                android:id="@+id/vf_details">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/ll_details2"
                    android:layout_marginHorizontal="30dp"
                    android:orientation="vertical">
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:hint="Position for Internship"
                        android:inputType="numberDecimal"
                        android:layout_marginVertical="10dp"
                        android:textColorHint="@color/light"
                        android:padding="10dp"
                        android:maxLines="1"
                        android:background="@drawable/et_back"
                        android:id="@+id/internship_position"/>

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:hint="Number of openings"
                        android:inputType="numberDecimal"
                        android:layout_marginVertical="10dp"
                        android:textColorHint="@color/light"
                        android:padding="10dp"
                        android:maxLines="1"
                        android:background="@drawable/et_back"
                        android:id="@+id/et_openings"/>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:weightSum="2">

                        <TextView
                            android:id="@+id/et_start_date"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:layout_marginRight="10dp"
                            android:hint="Start Date"
                            android:drawablePadding="15dp"
                            android:focusable="false"
                            android:drawableRight="@drawable/ic_calender"
                            android:textColorHint="@color/light"
                            android:padding="10dp"
                            android:background="@drawable/et_back"/>

                        <LinearLayout
                            android:id="@+id/ll_duration"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:background="@drawable/et_back"
                            android:layout_marginLeft="10dp"
                            android:weightSum="2"

                            >


                            <EditText
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:layout_margin="2dp"
                                android:hint="Duration"
                                android:paddingLeft="5dp"
                                android:textColor="@color/dark"
                                android:inputType="numberDecimal"
                                android:textColorHint="@color/light"
                                android:background="@color/white"/>

                            <View
                                android:id="@+id/v_vertical_bar1"
                                android:layout_width="1dp"
                                android:layout_height="match_parent"
                                android:background="@color/dark"
                                android:layout_marginVertical="10dp"/>

                            <AutoCompleteTextView
                                android:id="@+id/actv1"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_marginVertical="1dp"
                                android:layout_marginRight="2dp"
                                android:layout_weight="1"
                                android:dropDownAnchor="@id/ll_duration"
                                android:background="@color/white"
                                android:drawableRight="@drawable/ic_arrow_drop_down_primary_24dp"
                                android:hint="week"
                                android:padding="5dp"
                                android:textColor="@color/dark"
                                android:maxLines="1"
                                android:textColorHint="@color/dark"
                                android:textSize="12dp" />

                        </LinearLayout>



                    </LinearLayout>

                    <EditText
                        android:id="@+id/et_about"
                        android:layout_width="match_parent"
                        android:layout_height="120dp"
                        android:maxLength="250"
                        android:background="@drawable/et_back"
                        android:hint="About Internship"
                        android:gravity="start"
                        android:padding="10dp"
                        android:textColorHint="@color/light"
                        android:textColor="@color/dark"
                        android:layout_marginTop="10dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/counter"
                        android:layout_gravity="right"
                        android:textColor="@color/dark"
                        android:text="0/250"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:hint="Last date to apply"
                        android:inputType="numberDecimal"
                        android:layout_marginVertical="10dp"
                        android:drawableRight="@drawable/ic_calender"
                        android:drawablePadding="15dp"
                        android:textColorHint="@color/light"
                        android:padding="10dp"
                        android:maxLines="1"
                        android:background="@drawable/et_back"
                        android:id="@+id/et_last_date_to_apply"
                        android:focusable="false" />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/ll_details3"
                    android:layout_marginHorizontal="30dp"
                    android:orientation="vertical">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:hint="Skills required"
                        android:inputType="text"
                        android:layout_marginVertical="10dp"
                        android:textColorHint="@color/light"
                        android:padding="10dp"
                        android:maxLines="1"
                        android:background="@drawable/et_back"
                        android:id="@+id/et_skills"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="@drawable/et_back"
                        android:weightSum="2">

                        <EditText
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1.3"
                            android:layout_margin="2dp"
                            android:hint="Stipend"
                            android:padding="10dp"
                            android:inputType="text"
                            android:textColorHint="@color/light"
                            android:background="@color/white"/>

                        <View
                            android:id="@+id/v_vertical_bar"
                            android:layout_width="1dp"
                            android:layout_height="match_parent"
                            android:background="@color/dark"
                            android:layout_margin="10dp"/>
                        <AutoCompleteTextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:hint=" per week"
                            android:padding="5dp"
                            android:textColorHint="@color/mid"
                            android:textSize="15dp"
                            android:layout_weight=".7"
                            android:textColor="@color/dark"
                            android:layout_margin="2dp"
                            android:background="@color/white"
                            android:id="@+id/actv"/>

                    </LinearLayout>



                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:hint="Perks"
                        android:inputType="numberDecimal"
                        android:layout_marginVertical="10dp"
                        android:textColorHint="@color/light"
                        android:padding="10dp"
                        android:maxLines="1"
                        android:background="@drawable/et_back"
                        android:id="@+id/et_Perks"/>
                    <RadioGroup
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:orientation="horizontal"
                        android:outlineAmbientShadowColor="@color/dark"
                        android:id="@+id/radioGroup">
                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/dark"
                            android:text="Full time"
                            android:buttonTint="@color/dark"
                            android:id="@+id/fullTime"
                            android:layout_marginLeft="12dp"/>
                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/dark"
                            android:buttonTint="@color/dark"
                            android:text="Part time/Work from Home"
                            android:id="@+id/work_from_home"
                            android:layout_marginLeft="20dp"/>

                    </RadioGroup>
                    <AutoCompleteTextView
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:hint="City"
                        android:textColorHint="@color/light"
                        android:padding="10dp"
                        android:visibility="gone"
                        android:layout_below="@id/tv"
                        android:layout_marginVertical="10dp"
                        android:maxLines="1"
                        android:inputType="text"
                        android:background="@drawable/et_back"
                        android:id="@+id/ac_city"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/ll_details4"
                    android:layout_marginHorizontal="30dp"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/questions"
                        android:layout_marginVertical="10dp"
                        android:textStyle="bold"
                        android:textSize="18sp"/>
                    <androidx.recyclerview.widget.RecyclerView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/list"
                        android:nestedScrollingEnabled="false"/>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:padding="10dp"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/et_back"
                        android:id="@+id/questionLayout">
                        <EditText
                            android:id="@+id/et_question"
                            android:layout_width="match_parent"
                            android:layout_height="90dp"
                            android:maxLength="250"
                            android:hint="Type your question..."
                            android:gravity="start"
                            android:background="@color/white"
                            android:textColorHint="@color/light"
                            android:textColor="@color/dark"
                            android:layout_above="@+id/save"/>
                        <Button
                            android:id="@+id/save"
                            android:layout_width="wrap_content"
                            android:layout_height="40dp"
                            android:background="@drawable/get_started"
                            android:text="Save"
                            android:textColor="#ffffff"
                            android:textAllCaps="false"
                            android:padding="5dp"
                            android:layout_alignParentEnd="true"
                            android:layout_alignParentBottom="true"
                            android:layout_margin="5dp"/>
                    </RelativeLayout>


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:text="+ Add Question"
                        android:layout_marginVertical="10dp"
                        android:textColor="@color/dark"
                        android:id="@+id/tvToAdd"
                        android:textStyle="bold"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Recommended questions"
                        android:layout_marginBottom="10dp"
                        android:textStyle="bold"
                        android:textSize="18sp"/>
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/dark"
                        android:text="@string/question1"
                        android:buttonTint="@color/dark"
                        android:id="@+id/quest1"
                        android:layout_marginVertical="5dp"
                        android:textStyle="bold"
                        android:gravity="start"/>
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/dark"
                        android:text="@string/question2"
                        android:buttonTint="@color/dark"
                        android:id="@+id/quest2"
                        android:gravity="start"
                        android:layout_marginVertical="5dp"
                        android:textStyle="bold"/>
                </LinearLayout>

            </ViewFlipper>

            <Button
                android:id="@+id/btn_continue"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:background="@drawable/get_started"
                android:layout_below="@id/vf_details"
                android:layout_centerHorizontal="true"
                android:text="Save and Next"
                android:layout_marginTop="40dp"
                android:onClick="flip"
                android:textColor="#ffffff"
                android:textAllCaps="false"
                android:padding="10dp"/>
        </RelativeLayout>

    </ScrollView>




</LinearLayout>